# dp-assessment-workbench

./: .dockerignore  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  Dockerfile  Makefile  README.md  pyproject.toml  server.json
.forgejo/workflows/: validate.yml
.github/workflows/: create-release.yml  publish-mcp.yml  validate.yml
battery_pass_examples/: README.md  conversion_notes.md  first_reduced_comparison_note.md
battery_pass_examples/profiles/: battery_product_identification_batterypass.yaml
ce_rise_examples/profiles/: battery_product_identification_live.yaml  dp_record_metadata_live.yaml  metadata_and_traceability_live.yaml  metadata_focused_composition_live.yaml  traceability_and_life_cycle_events_live.yaml
ce_rise_examples/use_cases/: record_identity_lookup.yaml
docs/: SUMMARY.md  analysis-dimensions.md  api-reference.md  book.toml  example-applications.md  index.md  live-sources.md  mcp-readiness.md  mcp-server.md  pipeline.md  result-interpretation.md  source-ingestion.md
examples/: README.md
examples/01-source-ingestion/: README.md
examples/02-structural-comparison/: README.md
examples/03-reduced-use-case-comparison/: README.md  conversion_notes.md
examples/04-extended-use-case-comparison/: README.md
examples/05-composition-recommendation/: README.md
fixtures/alignments/: synthetic_solution_alignment.yaml  synthetic_solution_partial_alignment.yaml
fixtures/models/: import_child.ttl  import_parent.ttl  synthetic_battery_metadata_v1.ttl  synthetic_battery_metadata_v2.ttl  synthetic_camel_case.ttl  synthetic_contradiction.ttl  synthetic_dangling.ttl  synthetic_missing_property_shape.ttl  synthetic_redundancy.ttl  synthetic_reference_join.ttl  synthetic_richer_contradiction.ttl  synthetic_solution_a.ttl  synthetic_solution_b.ttl
fixtures/profiles/: synthetic_camel_case_profile.yaml  synthetic_contradiction_profile.yaml  synthetic_dangling_profile.yaml  synthetic_evolution_latest.yaml  synthetic_evolution_previous.yaml  synthetic_import_profile.yaml  synthetic_missing_property_shape_profile.yaml  synthetic_redundancy_profile.yaml  synthetic_reference_join_profile.yaml  synthetic_richer_contradiction_profile.yaml  synthetic_solution_a.yaml  synthetic_solution_b.yaml
fixtures/use_cases/: passport_actor_lookup.yaml  (+3 more)
scripts/: release-check-local.sh  run-local.sh  test-local.sh  validate-local.sh
tests/: test_mcp_server.py  test_pipeline.py
(+60 files in other folders)
