[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpawb"
version = "0.1.2"
description = "SHACL-based analytical workbench for digital passport model assessment and use-case coverage."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "EUPL-1.2" }
authors = [
  { name = "Riccardo Boero" }
]
dependencies = [
  "PyYAML>=6.0",
  "jsonschema>=4.23",
  "rdflib>=7.0",
]
keywords = ["shacl", "rdf", "digital-product-passport", "analytics", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://codeberg.org/CE-RISE-software/dp-assessment-workbench"
Repository = "https://codeberg.org/CE-RISE-software/dp-assessment-workbench"
Documentation = "https://ce-rise-software.codeberg.page/dp-assessment-workbench/"
Changelog = "https://codeberg.org/CE-RISE-software/dp-assessment-workbench/src/branch/main/CHANGELOG.md"

[project.scripts]
dpawb = "dpawb.cli:main"
dpawb-mcp = "dpawb.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dpawb = ["data/**/*.json", "data/**/*.yaml"]
